--- a/ET.html
+++ b/ET.html
@@ -27,17 +27,17 @@
             <li class="spend"></li>
         </ul>
         <form id="expense-form">
-            <label for="expense">Expense Amount</label>
+            <label for="amount">Expense Amount</label>
             <div class="input-group">
                 <div class="input-group-text">₹</div>
-                <input type="number" class="form-control" id="expense" placeholder="Enter Amount" required>
+                <input type="number" class="form-control" id="amount" placeholder="Enter Amount" required>
             </div>
             
             <div class="form-group">
                 <label for="category">Category</label>
                 <input type="text" class="form-control" id="category" placeholder="Choose Category" required>
             </div>
-            <button class="btn btn-primary">Add Expense</button>
+            <button type="button" class="btn btn-primary">Add Expense</button>
         </form>
         <div class="col-md-6">
             <ul id="expense-list" class="list-group mt-3">
