--- a/ET.html
+++ b/ET.html
@@ -2,47 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="ET.css">
   </head>
   <body>
-    <h2>Expense Tracker</h2>
     <div class="container">
-        <h4>Your Balance</h4>
-        <h2 id="balance">0.00</h2>
-        <div calss="inc-exp-container">
-            <div>
-                <h4>Income</h4>
-                <p id="add-money" class="add-money">0.00</p>
+        <h2 class="mt-5">Expense Tracker</h2>
+        <div class="row mt-3">
+            <div class="col-md-6">
+                <form id="expense-form">
+                    <div class="form-group">
+                        <label for="amount">Amount</label>
+                        <input type="number" class="form-control" id="amount" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="category">Category</label>
+                        <input type="text" class="form-control" id="category" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Add Expense</button>
+                </form>
             </div>
-            <div>
-                <h4>Expense</h4>
-                <p id="spend-money">0.00</p>
+            <div class="col-md-6">
+                <ul id="expense-list" class="list-group mt-3">
+                    <!-- Expenses will be displayed here -->
+                </ul>
             </div>
-        </div>
-        <h3>History</h3>
-        <ul>
-            <li class="spend"></li>
-        </ul>
-        <form id="expense-form">
-            <label for="amount">Expense Amount</label>
-            <div class="input-group">
-                <div class="input-group-text">₹</div>
-                <input type="number" class="form-control" id="amount" placeholder="Enter Amount" required>
-            </div>
-            
-            <div class="form-group">
-                <label for="category">Category</label>
-                <input type="text" class="form-control" id="category" placeholder="Choose Category" required>
-            </div>
-            <button type="button" class="btn btn-primary">Add Expense</button>
-        </form>
-        <div class="col-md-6">
-            <ul id="expense-list" class="list-group mt-3">
-                <!-- Expenses will be displayed here -->
-            </ul>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
